--- a/partials/bookIndex.html
+++ b/partials/bookIndex.html
@@ -28,6 +28,7 @@
       </div>
       <input type="submit" value="Save Changes" class="btn btn-default">
       <input ng-click="book.editForm = false" value="Cancel" class="btn btn-default">
+      <a href="javasript:void(0)" ng-click="deleteBook(book)" class="btn btn-default">Delete Book</a>
     </form>
   </li>
 </ul>
