--- a/partials/about.html
+++ b/partials/about.html
@@ -1,3 +1,3 @@
-<h1>Technologies of this App</h1>
+<h1>Technology Used</h1>
 <br>
 <p>This app is an Angular Js app that's using one of angular's core feature ->$http to CRUD with an external API </p>
